# up-transport-vsomeip-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASING.md
.github/workflows/: bundled-lint-and-test.yaml  github-actions-policy-checks.yaml  lint-and-test.yaml  release.yaml  unbundled-lint-and-test.yaml
example-utils/hello-world-protos/: Cargo.toml  build.rs
example-utils/hello-world-protos/src/: lib.rs
src/: determinations.rs  determine_message_type.rs  lib.rs  listener_registry.rs  message_conversions.rs  rpc_correlation.rs  transport.rs  transport_inner.rs  vsomeip_config.rs  vsomeip_offered_requested.rs
tests/: client_service.rs  point_to_point.rs  publisher_subscriber.rs  register_unregister.rs  upclient_vsomeip.rs
up-transport-vsomeip/: Cargo.toml
up-transport-vsomeip/examples/: hello_client.rs  hello_service.rs
up-transport-vsomeip/src/: determine_message_type.rs  lib.rs  message_conversions.rs  storage.rs  transport.rs  transport_engine.rs  transport_inner.rs  utils.rs  vsomeip_config.rs
up-transport-vsomeip/src/storage/: application_registry.rs  application_state_availability_handler_registry.rs  message_handler_registry.rs  rpc_correlation.rs  vsomeip_offered_requested.rs
up-transport-vsomeip/src/transport_inner/: transport_inner_engine.rs  transport_inner_handle.rs
up-transport-vsomeip/tests/: client_service.rs  point_to_point.rs  publisher_subscriber.rs  register_unregister.rs  test_lib.rs
up-transport-vsomeip/vsomeip_configs/: client.json  example_ustreamer.json  point_to_point_integ.json  service.json
vsomeip-proc-macro/: Cargo.toml
vsomeip-proc-macro/src/: lib.rs
vsomeip-sys/: .gitignore  Cargo.toml  README.md  build.rs
vsomeip-sys/examples/: client_example.rs  publisher_example.rs  publisher_example_listen_for_subs.rs  service_example.rs  subscriber_example.rs
vsomeip-sys/patches/: disable_tests.patch
vsomeip-sys/src/: cxx_bridge.rs  extern_callback_wrappers.rs  glue_additions.rs  lib.rs  safe_glue.rs
vsomeip-sys/src/glue/: application_registrations.cpp  application_registrations.h
vsomeip-sys/src/glue/include/: application_wrapper.h  message_wrapper.h  payload_wrapper.h  runtime_wrapper.h
vsomeip-sys/src/glue/src/: application_wrapper.cpp
vsomeip_configs/: client.json  example_ustreamer.json  example_ustreamer_2.json  point_to_point_integ.json  service.json
