################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[workspace]
resolver = "2"
members = [
    "up-transport-vsomeip",
    "vsomeip-sys",
]

[workspace.package]
documentation = "https://github.com/eclipse-uprotocol/up-spec#readme"
edition = "2021"
exclude = [
    "tests/*",
    "tools/*",
    ".devcontainer/*",
    ".vscode/*",
    ".github/*",
    ".gitignore",
]
keywords = ["uProtocol", "SDK", "vsomeip", "SOMEIP"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-transport-vsomeip-rust"
rust-version = "1.74"
version = "0.1.0"

[workspace.dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.5" }
rand = { version = "0.8" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "3a50104421a801d52e1d9c68979db54c013ce43d" }
url = { version = "2.5" }
uuid = { version = "1.7", features = ["v8"] }
vsomeip-sys = { path = "vsomeip-sys", default-features = false }

[workspace.dev-dependencies]
test-case = { version = "3.3" }
