################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "up-transport-vsomeip"
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"

[features]
default = ["bundled"]
bundled = ["vsomeip-sys/bundled"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
up-rust = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
vsomeip-sys = { workspace = true }

[dev-dependencies]
test-case = { version = "3.3" }
