################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "vsomeip-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = { version = "0.26.0" }
crossbeam-channel = "0.5.13"
cxx = { version = "1.0" }
lazy_static = "1.4.0"
once_cell = "1.19.0"

[build-dependencies]
autocxx-build = { version = "0.26.0" }
cxx-build = "1.0.122"
decompress = { version = "0.6.0" }
miette = { version = "5", features = ["fancy"] }
reqwest = { version = "0.12", features = ["blocking"] }