# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hello-world-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5" }
protobuf = { version = "3.3", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen = { version = "3.3" }
protoc-bin-vendored = { version = "3.0" }
reqwest = { version = "0.12", features = ["blocking"] }
